<resources>
    <string name="app_name">Squadron Cinema</string>
    <string name="title_activity_sidebar">SidebarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="squadron_cinema">Squadron Cinema</string>
    <string name="squadroncinema_gmail_com">squadronCinema@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="title">ABC CINEMA</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="number">Telephone</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="telephone">Telephone</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="tagline">tagline</string>
    <string name="registration_title">REGISTRATION</string>
    <string name="username_title">USERNAME</string>
    <string name="firstname_title">FIRSTNAME</string>
    <string name="lastname_title">LASTNAME</string>
    <string name="email_title">EMAIL</string>
    <string name="telephone_title">TELEPHONE</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="member">Already a member? SIGNIN</string>
    <string name="usertable">USER</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="Password">Password</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="forget_password">forget password</string>
    <string name="forget_password_detail">Provide your account email to reset your password</string>
    <string name="Reset">Reset Passwaord</string>
    <string name="Continue">Continue</string>
    <string name="ResetP">Reset Password</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="feedback">Feedback Description</string>
    <string name="submit">Submit</string>
    <string name="logout">LOGOUT</string>
    <string name="PasswordC">Confirm Password</string>
    <string name="myprofile">My profile</string>
    <string name="Calculator">Calculator</string>
</resources>