<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck1"
    android:padding="30dp"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_action_password"
            app:tint="@color/purple_700" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forget_password_detail"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pswdemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/purple_700"
            android:drawableLeft="@drawable/mail"
            android:drawableTint="@color/purple_700"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/purple_700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/ResetP" />

    </LinearLayout>

</ScrollView>