<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck1"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <EditText
        android:id="@+id/email"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="232dp"
        android:text="TELEPHONE"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="232dp"
        android:text="EMAIL"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_placholder" />

    <Button
        android:id="@+id/update"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/purple_700"
        android:hint="@string/save"
        android:text="SAVE"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/delete"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/purple_700"
        android:hint="@string/cancel"
        android:text="CANCEL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="305dp"
        android:layout_height="46dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_title" />

    <TextView
        android:id="@+id/firstname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="232dp"
        android:text="FIRSTNAME"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/number"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/lastname_placholder"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="232dp"
        android:text="LASTNAME"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="UPDATE PROFILE"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>